Add search preferences and Json bug fixes

--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="oliva.marc.com.booklisting.BookListActivity">
+    tools:context="oliva.marc.com.booklisting.BookListActivity"
+    android:id="@+id/container"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
